# hadoo

./: README.md  hadoo.cabal
app/: Main.hs
data/Done/: 000.txt  004.txt  005.txt  013.txt  014.txt  015.txt
data/Todo/: 000.txt
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: hadoo-0.1.0.0-inplace.conf  package.cache
lib/Hadoo/: Board.hs  Helpers.hs  Item.hs  Lane.hs  Persistence.hs  State.hs  Web.hs
static/: lanes_example.html  styles.css
test/: HadooTest.hs
