cabal-version:       3.0
name:                hadoo
version:             0.1.0.0
author:              Anonymous
build-type:          Simple

common common-properties
  default-language: Haskell2010
  build-depends:
    base >=4.13 && <5
   ,scotty ==0.12
   ,wai-extra ==3.1.2
   ,directory ==1.3.6.1
   ,transformers
   ,text >=1.2.3
  ghc-options:
    -Wall

library
  import:              common-properties
  exposed-modules:     Hadoo.Web
                      ,Hadoo.Helpers
                      ,Hadoo.Board
                      ,Hadoo.Lane
                      ,Hadoo.State
  build-depends:       
  hs-source-dirs:      lib

executable hadoo
  import:              common-properties
  main-is:             Main.hs
  build-depends:       hadoo
  hs-source-dirs:      app
  ghc-options: -threaded -rtsopts

test-suite test
  import:              common-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             HadooTest.hs
  build-depends:       tasty >= 1.3
                     , tasty-hunit 
                     , hadoo 
